--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="position-relative overflow-hidden p-3 p-md-5 m-0 text-center bg-image mb-8 full-screen">
             <div class="col-md-5 p-lg-5 mx-auto ms-12_5 my-5 position-absolute top-50 start-0 translate-middle-y">
-                <h1 class="">Julia Sidler</h1>
+                <h1 class="">Julia Sidler Hallo</h1>
                 <p class="lead">Lernende Mediamatikerin</p>
                 <div class="btn-group mt-sm-6 d-flex justify-content-around" role="group">
                     <!--<a href="html/lebenslauf.html"><button type="button" class="btn subtitle rounded-pill btn-light py-sm-2 px-sm-5 mx-sm-6 w-214rem">Lebenslauf</button></a>-->
