Fehlermeldung beim Formular, beim Nichtausfüllen, für alle Felder - FUNKTIONIERT

--- a/index.html
+++ b/index.html
@@ -358,11 +358,11 @@
                             <input type="text" name="fullname" id="fullname" class="form-control" placeholder="Voller Name*" required>
                         </div>
                         <div class="col">
-                            <input type="email" name="Email" id="Email" class="form-control" placeholder="Email*" required>
+                            <input type="email" name="email" id="email" class="form-control" placeholder="Email*" required>
                         </div>
                     </div>
                     <div>
-                        <input type="text" name="Betreff" id="Betreff" class="form-control mb-4" placeholder="Betreff*" required>
+                        <input type="text" name="betreff" id="betreff" class="form-control mb-4" placeholder="Betreff*" required>
                         <input type="file" name="fileDownload" id="fileDownload" class="form-control mb-5" multiple>
                         <textarea type="text" name="textblock" id="textblock" class="form-control" placeholder="Nachricht*" rows="5" required></textarea>
                     </div>
