--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                         <input type="file" name="fileDownload" id="fileDownload" class="form-control mb-5" multiple>
                         <textarea type="text" name="textblock" id="textblock" class="form-control" placeholder="Nachricht*" rows="5" required></textarea>
                     </div>
-                    <p class="mt-2 mb-1" id="errorTextMsg"></p>
-                    <button type="button" onclick="errorMsg()" class="btn subtitle rounded-pill btn-light py-sm-2 px-sm-5 my-sm-5 w-214p">Absenden</button>
+                    <p class="mt-3 mb-0 errorTextMsg" id="errorTextMsg"></p>
+                    <button type="button" onclick="errorMsg(); errorMsgEmail()" class="btn subtitle rounded-pill btn-light py-sm-2 px-sm-5 my-sm-5 w-214p">Absenden</button>
                 </form>
             </div>
         </div>
