--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
 
     <!-- externe extras -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -355,19 +354,19 @@
                 <form id="form" novalidate>
                     <div class="row mb-4">
                         <div class="col">
-                            <input type="text" name="fullname" id="fullname" class="form-control" placeholder="Voller Name*" required>
+                            <input type="text" name="required" id="fullname" class="form-control" placeholder="Voller Name*" required>
                         </div>
                         <div class="col">
-                            <input type="email" name="email" id="email" class="form-control" placeholder="Email*" required>
+                            <input type="email" name="required" id="email" class="form-control" placeholder="Email*" required>
                         </div>
                     </div>
                     <div>
-                        <input type="text" name="betreff" id="betreff" class="form-control mb-4" placeholder="Betreff*" required>
-                        <input type="file" name="fileDownload" id="fileDownload" class="form-control mb-5" multiple>
-                        <textarea type="text" name="textblock" id="textblock" class="form-control" placeholder="Nachricht*" rows="5" required></textarea>
+                        <input type="text" name="required" id="betreff" class="form-control mb-4" placeholder="Betreff*" required>
+                        <input type="file" name="notrequired" id="fileDownload" class="form-control mb-5" multiple>
+                        <textarea type="text" name="required" id="textblock" class="form-control" placeholder="Nachricht*" rows="5" required></textarea>
                     </div>
-                    <p class="mt-3 mb-0 errorTextMsg" id="errorTextMsg"></p>
-                    <button type="button" onclick="errorMsg(); errorMsgEmail(); resetForm()" class="btn subtitle rounded-pill btn-light py-sm-2 px-sm-5 my-sm-5 w-214p">Absenden</button>
+                    <p class="mt-3 mb-0 " id="errorTextMsg"></p>
+                    <button id="absenden" type="button" onclick="showErrorMsg()" class="btn subtitle rounded-pill btn-light py-sm-2 px-sm-5 my-sm-5 w-214p">Absenden</button>
                 </form>
             </div>
         </div>
@@ -377,7 +376,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p>2021 Schweiz. Design by Julia Sidler.</p>
+                    <p>Created in 2021 Schweiz. Made by Julia Sidler.</p>
                 </div>
                 <div class="col me-4">
                     <p class="text-end"><a class="link" href="#top">Nach oben</a></p>
@@ -385,6 +384,7 @@
             </div>
         </div>
     </footer>
-
+    <!-- Java Script -->
+    <script src="js/script.js"></script>
 </body>
 </html>
