JSON hinzugefügt (Alles neu eingefügt, da ich es heruntergeladen habe und so nicht pushen konnte)

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     </div>
 
     <div class="container-mx row" id="kontakt">
-        <button type="button" onclick="autofill()">autofill</button> <!-- autofilled wird und die funktion autofill auf klick ausgeführt wird.-->
+        <button type="button" onclick="autofill()">autofill</button> <!-- autofilled wird und die Funktion autofill auf klick ausgeführt wird.-->
         <h2>Kontakt</h2>
         <p class="lead-text-small">Schreiben Sie mich an!</p>
         <div>
