--- a/index.html
+++ b/index.html
@@ -371,7 +371,8 @@
                         <button id="absenden" type="button" onclick="showErrorMsg()" class="btn subtitle rounded-pill btn-light py-sm-2 px-sm-5 my-sm-5 w-214p">Absenden</button>
                     </div>
                     <div class="col-7">
-                        <button type="button" onclick="autofill()" class="btn subtitle rounded-pill btn-light py-sm-2 px-sm-5 my-sm-5 w-214p">Beispiel</button> <!-- autofilled wird und die Funktion autofill auf klick ausgeführt wird.-->
+                        <!-- autofilled wird und die Funktion autofill auf klick ausgeführt wird.-->
+                        <button type="button" onclick="autofill()" class="btn subtitle rounded-pill btn-light py-sm-2 px-sm-5 my-sm-5 w-214p">Beispiel</button>
                     </div>
                 </div>
             </form>
